# Learn

./: 404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json  hotkeys.json  types.json  workspace.json
.obsidian/plugins/obsidian-admonition/: data.json
.obsidian/plugins/obsidian-icon-folder/: data.json
.obsidian/plugins/obsidian-style-settings/: data.json
.obsidian/snippets/: style.css
Excalidraw/: Drawing 2024-10-23 19.48.43.excalidraw.md
IT/: IT.md
IT/Computer_science/: Computer_science.md
IT/Computer_science/Algorithms/: Algorithms.md  Kadane_algorithms.md  Trapping_rain_water.md
IT/Computer_science/Data_structures/: Array.md  Core.md  Data_Structures.md  Linked_list.md  Queue.md  Stack.md
IT/web/: Web.md
IT/web/Base/: Internet.md
books/: index.html
docs/: books.md  index.md  projects.md
docs/learn/base/auth/: index.md
docs/learn/web/: general.md
docs/notes/: index.md
docs/notes/configs/: python.md
docs/plan/: index.md  recommend.md
learn/: index.html
learn/base/auth/: index.html
learn/web/general/: index.html
learn/web/html/: index.html
learn/web/js/: index.html
notes/: index.html
notes/configs/python/: index.html
plan/: Notes.md  index.html  link.md
plan/recommend/: index.html
plan/sprints/: backlog.md  sprint 1.md  sprint 2.md
projects/: index.html
search/: search_index.json
site/: index.html  sitemap.xml
site/learn/: index.html
site/search/: search_index.json
templates/: Kanban.md  Summary_learn.md
(+76 files in other folders)
