[tool.poetry]
name = "learn"
version = "0.1.0"
description = ""
authors = ["NetoGeek <wion272@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.11"
termynal = "^0.11.1"
mkdocs-glightbox = "^0.3.5"
pymdown-extensions = "^10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
